# projectaria-ros2

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
aloha/: aria_utils.py  constants.py  real_env.py  robot_utils.py  stream_aria.py  stream_aria_ros.py  visualizer.py
config/: rs_cam.yaml
egomimic/hardware/arm_to_torso_mount/: driver_mounting_plate.stl
eve/: aloha_fk.py  real_env.py  robot_utils.py  stream_aria_ros.py
hardware/arm_to_torso_mount/: follower_mounting_plate.stl
launch/: aloha_bringup.launch.py  aria.launch.py
scripts/: auto_record.sh  dual_side_teleop.py  record_episodes.py  replay_and_record_episodes.py  replay_episodes.py  sleep.py  visualize_episodes.py
