<?xml version="1.0"?>
<package format="2">
  <name>eve</name>
  <version>0.0.0</version>
  <description>Eve</description>
  <maintainer email="skareer@gatech.edu">Simar Kareer</maintainer>
  <license>BSD</license>
  <author email="skareer@gatech.edu">Tony Zhao</author>

  <buildtool_depend>ament_python</buildtool_depend>

  
  <depend>rclpy</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>usb_cam</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
